# LuckCode

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.luckcode/: config.toml  ignore
crates/luckcode-cli/: Cargo.toml
crates/luckcode-cli/src/: eval_runner.rs  main.rs  tui.rs
crates/luckcode-core/: Cargo.toml
crates/luckcode-core/src/: lib.rs
crates/luckcode-model/: Cargo.toml
crates/luckcode-model/src/: lib.rs
crates/luckcode-storage/: Cargo.toml
crates/luckcode-storage/src/: lib.rs
crates/luckcode-tools/: Cargo.toml
crates/luckcode-tools/src/: lib.rs
doc/: backend-coding-standards.md  luckcode-next-phase-implementation-design.md  luckcode-rust-cli-coding-agent-plan.md
evals/shell_safety/: eval.toml
