[workspace]
resolver = "2"
members = [
  "crates/luckcode-cli",
  "crates/luckcode-core",
  "crates/luckcode-model",
  "crates/luckcode-tools",
  "crates/luckcode-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
futures-util = "0.3"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

luckcode-core = { path = "crates/luckcode-core" }
luckcode-model = { path = "crates/luckcode-model" }
luckcode-storage = { path = "crates/luckcode-storage" }
luckcode-tools = { path = "crates/luckcode-tools" }
