[package]
name = "luckcode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "luckcode"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

luckcode-core.workspace = true
luckcode-model.workspace = true
luckcode-storage.workspace = true
luckcode-tools.workspace = true

[dev-dependencies]
tempfile.workspace = true
