[package]
name = "luckcode-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

luckcode-model.workspace = true
luckcode-storage.workspace = true
luckcode-tools.workspace = true
