[package]
name = "luckcode-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
