[package]
name = "luckcode-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
